Rename `/admin/proposals` filter parameter
Rename the existing `filter` query parameter for the `GET
/admin/proposals` endpoint to `management_type` to more accurately
reflect what the filter is, and to allow for additional filters to be
provided.
